@@ -27,7 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-24-Nov-2009 Ron Severdia
+25-Nov-2009 Andrew Eddie
+ + Added menu_image param to alias and url menu link types.
+
+24-Nov-2009 Andrew Eddie
  ^ Initial refactoring of com_modules.
    - changed menu page selector to list of checkboxes.
    - changed params to fields in module XML files.
